change the blacklist logic to whitelist logic
